--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/motor representation and shared intention HANDOUT.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/motor representation and shared intention HANDOUT.tex
@@ -1,7 +1,7 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 
-\documentclass[11pt]{extarticle}
+\documentclass[12pt]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
 \def \ititle {Shared Agency and Motor Representation}
@@ -43,7 +43,7 @@
 
 \begin{center}
 {\Large
-\textbf{Shared Agency and Motor Representation}
+\textbf{Shared Agency \\and Motor Representation}
 }
 
 
@@ -51,77 +51,102 @@
 butterfillS@ceu.hu / s.butterfill@warwick.ac.uk
 
 \end{center}
-%
-%
-%\textbf{Abstract}
-%On the assumption that social motor representation plays a role in explaining how effective joint action is possible, do we also need motor representation to explain what joint action is?  Philosophers tend to assume that motor representation is only an enabling condition for joint action and of no direct interest to narrowly philosophical theories of joint action and shared intention.  In this talk I shall argue that social motor representation and shared intention  have distinctive roles in explaining the purposiveness of joint action.  This gives rise to a challenge.  On the one hand, effective joint action---imagine two people erecting a tent in a gale together---sometimes requires both shared intentions and social motor representations plus a certain kind of harmony between the two.  On the other hand, recognizing their distinctive roles precludes the existence of direct inferential links between shared intentions and social motor representations.  The challenge is to explain how these two kinds of representation could sometimes harmoniously contribute to effective joint action despite the lack of inferential integration.
-%
-
-\section{Introduction}
-A representation (motor or not) is \emph{agent-neutral} if its content does not specify any particular agent or agents.
-
-%***CHECK DEFINITIONS***
-
-Two or more motor representations are \emph{reciprocal} just if there is a single outcome which each motor representation represents.
-
-\textbf{Premise} 
-Reciprocal agent-neutral motor representation enables joint action
 
 
-\begin{quote}
-`the social relation between individuals modulates action simulation ...\ motor activation during action anticipation depends on the ...\ relation between the actor and the observer ...\ Simulation of another person’s action, as reﬂected in the activation of motor cortices, gets stronger the more the other is perceived as an interaction partner.’  \citep{kourtis:2010_favoritism}
-\end{quote}
+\section{Question}
+\emph{Shared Agency}.  Sisters exercise shared agency when they cycle to school together; in contrast,  strangers who happen to be cycling the same route are exercising parallel but merely individual agency.\citep{gilbert_walking_1990}
 
-\textbf{Question} Does reciprocal agent-neutral motor representation also play a role in explaining what joint action is?  
+When members of a flash mob in the Central Cafe respond to a pre-arranged cue by noisily opening their newspapers, they exercise shared agency. 
+But when others happen to noisily open their newspapers in response to the same cue, they do not.\citep{Searle:1990em}
 
-\textbf{Challenge}  How could social motor representation and shared intention harmoniously contribute to joint action?
+
+A \emph{joint action} is an exercise of shared agency (in contrast to an \emph{individual action}).
+
+What is the relation between a purposive joint action and the goal or goals to which it is directed?
 
 
 
-\section{The possibility of purposive joint action}
-What is the relation between a purposive joint action and the outcome or outcomes to which it is directed?
-
-Reciprocal agent-neutral motor representations can
-(1) involve a representation, on the part of each agent, of an outcome; 
-(2) coordinate the several agents’ activities;
-and 
-(3) coordinate the several agents’ activities in such a that would normally facilitate the occurrence of the represented outcome.
+\section{The Standard View}
+‘the key property of joint action lies in its internal component [...] in the participants’ having a “collective” or “shared” intention.’ \citep{alonso_shared_2009} %[pp.\ 444-5]
 
 For you and I to have a shared intention that we J it is sufficient that: `(1)(a) I intend that we J and (b) you intend that we J; (2) I intend that we J in accordance with and because of la, lb, and meshing subplans of la and lb; you intend that we J in accordance with and because of la, lb, and meshing subplans of la and lb; (3) 1 and 2 are common knowledge between us.'\citep%[View 4]
 {Bratman:1993je}
 
+`each agent does not just intend that the group perform the […] joint action. Rather, each agent intends as well that the group perform this joint action in accordance with subplans (of the intentions in favor of the joint action) that mesh'\citep%[p.\ 332]
+{Bratman:1992mi}
+
+
+\section{Thesis}
+In some cases 
+	it is not a shared intention 
+	but a special structure of motor representation,
+	a `shared motor representation',
+	in virtue of which a joint action is related to its goal.
+
+
+\section{Shared Motor Representation}
+
+A \emph{goal} is an outcome to which actions are, or might be, directed.  (Contrast a \emph{goal-state}, an intention or other state of an agent linking an action to a goal to which it is directed.)
+
+An outcome is a \emph{distributive goal} of two or more actions  just if 
+(a) each action is individually directed to this outcome; and 
+(b) it is possible that: all actions succeed relative to this outcome.
+
+An outcome is a \emph{collective goal} of two or more actions just if
+(a) this outcome is a distributive goal of the actions;
+(b) the actions are coordinated; and 
+(c) coordination of this type would normally  facilitate occurrences of outcomes of this type
 
 
 
-\section{An objection}
-‘the key property of joint action lies in its internal component [...] in the participants’ having a “collective” or “shared” intention.’ \citep[pp.\ 444-5]{alonso_shared_2009}
+A representation or plan is \emph{agent-neutral} if its content does not specify any particular agent or agents; a planning process is agent-neutral if it involves only agent-neutral representations.
 
+Events $D_1$, ...\ $D_n$ \emph{ground} $E$, if: $D_1$, ...\ $D_n$ and $E$ occur; 
+$D_1$, ...\ $D_n$ are each (perhaps improper) parts of $E$; and 
+every event that is a proper part of $E$ but does not overlap  $D_1$, ...\ $D_n$ is caused by some or all of $D_1$, ...\ $D_n$.
 
-But could some reciprocal agent-neutral motor representations be shared intentions?  No ...
-\begin{enumerate}
-\item Only representations with a common format can be inferentially integrated.
+For an individual to be \emph{among the agents of an event} is for there to be actions $a_1$, ...\ $a_n$ which ground this event where the individual is an agent of some (one or more) of these actions.
 
-\item Any two intentions can be inferentially integrated in practical reasoning.
-
-\item My intention that I visit Paris on Friday is a propositional attitude.
-
-\item All intentions are propositional attitudes.
-
-\item No motor representations are propositional attitudes.
-
-\item No motor representations are intentions.
+We have a \emph{shared motor representation} of an outcome just if 
+\begin{enumerate}[label=\emph{\alph*}),itemsep=0pt,topsep=0pt]
+\item we each have a motor representation of this outcome; 
+\item we are each disposed to inhibit some but not all of the planning or actions resulting from (a);
+\item  we each expect that if the outcome occurs, we will all be among the agents of its occurrence; and
+\item the truth of (a) and (b) depends on the truth of (c).
 \end{enumerate}
+
+%Two or more representations (motor or not) are \emph{reciprocal} just if there is a single outcome which each represents.
+%
+
+
+
+\section{Evidence that Shared Motor %Rep\textsuperscript{\underline{n}} 
+Representation Exists}
+
+In joint action, motor planning can occur for another's actions,\citep{kourtis:2012_predictive} and can inform planning for one's own actions.\citep{vesper:2012_jumping}  %*submitted imagining acting paper
+
+In joint action, it is sometimes necessary to inhibit planning or performing another's action.\citep{sebanz:2006_twin_peaks} 
+Whether this is necessary depends on one's beliefs about co-actors' agency.\citep{tsai:2008_action}
+
+In some joint actions, the agents have a single representation of the whole action (not only separate representations of each agent's part).\citep{tsai:2011_groop_effect}
+
+
+% Vesper says forthcoming EEG paper using piano playing paradigm on agent-neutral identification of error: one brain wave signals whether there is an error, and a different brain wave signals whose error it is (also tells you whether the overall harmonics are affected)
+
+
 
 
 
 \section{The Interface Problem}
 Two  outcomes, A and B, \emph{match} in a particular context just if, in that context, either the occurrence of A would normally constitute or cause, at least partially, the occurrence of B or vice versa. 
 
-Some joint actions involve both shared  intention and reciprocal agent-neutral motor representation.
+A shared motor representation is in \emph{harmony} with a shared intention if they concern matching outcomes.
 
-How are non-accidental matches between the outcomes specified by shared intentions and by reciprocal agent-neutral motor representations possible?
+Some joint actions involve both shared intention and shared motor representation.
 
-`motor imagery could play a crucial role in bridging the gap'\citep{pacherie:2000_content}
+How is non-accidental harmony between shared intentions and shared motor representations?
+
+Proposal: `motor imagery could play a crucial role in bridging the gap'\citep{pacherie:2000_content}
 
 
 \footnotesize 
