--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation GOAL VERSION v2.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation GOAL VERSION v2.tex
@@ -346,7 +346,7 @@ that
 
 \subsection{*}
 Having each agent plan the whole joint action means that (i) each agent plans the other agent's action,
-(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action [***AMBIGUOUS: `that agent's plan' must refer to the other agent, not `each agent',
+(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action [***AMBIGUOUS: `that agent's plan' must refer to the other agent, not `each agent'],
 and 
 (iii) each  agent's plans for their own action are constrained by the plans for the other agent's action.
 
@@ -450,7 +450,7 @@ So the choice of term merely reflects our aim.
 
 
 
-\section{Interpersonal coordination and motor representation}
+\section{The Evidence: Interpersonal coordination and motor representation}
 
 These bits of evidence are relevant (***):
 %
@@ -875,9 +875,79 @@ the claim could alternatively be formulated by saying that  explaining shared ag
 
 
 
+\section{*Interface Problem}
 
-\section{Conclusion}
-We have been considering how to provide an account of shared agency that might contribute to investigating a tangle philosophical and scientific questions.
+[*Include this?]
+
+I think we can see a possible solution to this challenge by considering another problem.
+In constructing realisers of shared intention from ordinary individual intention, we need intentions \emph{that we J}.
+As has been much discussed, the contents of these intentions cannot all refer to actions involving shared intentions.
+For this reason Michael Bratman suggests that things we intend are  cooperatively neutral activities.
+It is then necessary to add further intentions in order to transform cooperatively neutral activities into joint actions.
+But it also seems possible that in some cases, what we intend when we intend that we J is not a cooperatively neutral activity but instead a joint action of the sort which involves social motor representation.
+
+So perhaps harmony between shared intention and social motor representation is sometimes achieved in this way: what we intend when we share an intention is the sort of joint action that involves social motor representation.
+
+
+\section{*Conclusion version 1}
+In conclusion,
+I have suggested that 
+shared motor representations
+can 
+ground purposive joint action
+for they
+can coordinate two or more agents' actions in virtue of representing a single outcome to which each agent's actions are directed.
+In this respect shared motor representation resembles shared intention.
+
+But there are also differences.
+Shared motor representation
+and
+shared intention  
+have \textbf{distinctive roles in explaining shared agency}.
+And, relatedly, shared motor representation is \textbf{unlike shared intention} in that its constituent representations are non-propositional in format and so it doesn't inferentially integrate with ordinary intentions and knowledge states.
+
+This has two consequences.
+One is that we cannot fully understand shared agency is if we focus only on shared intention.
+The other is that we face a challenge.
+The challenge is to explain how these two kinds of representation could sometimes harmoniously contribute to effective shared agency despite not being inferentially integrated in practical reasoning.
+
+
+
+\section{*Conclusion version 2}
+My question was,
+What's the relation between a joint action and the goal or goals to which it is directed?
+
+I have been arguing that we may need to appeal to shared intention to answer this question,
+but we can't answer it by appeal only to shared intention.
+This is because some joint actions are related to goals by special structures of motor representation which I've been calling shared motor representations.
+
+Shared motor representation is \textbf{like shared intention} in that: (i) represent outcome; (ii) coordinate action; (iii) coordinate action in such a way that ...
+
+But  shared motor representation is \textbf{unlike shared intention} in that its constituent representations are non-propositional in format and so it doesn't inferentially integrate with ordinary intentions and knowledge states.
+
+This led us to the interface problem ...
+
+So to understand the relation between joint actions and their goals, we need to appeal, 	
+	not only to structures of intention and knowledge,
+	but also to structures of motor representation.
+
+This may matter for understanding the role of joint action in evolution and development;
+it may have consequences  for the metaphysics of joint action, and for claims about norms governing shared agency.
+
+If it's true that some joint actions involve shard motor representation,
+
+
+ phenomenology
+
+
+
+Having each agent plan the whole joint action means that (i) each agent plans the other agent's action,
+(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action [***AMBIGUOUS: `that agent's plan' must refer to the other agent, not `each agent'],
+and 
+(iii) each  agent's plans for their own action are constrained by the plans for the other agent's action.
+
+\textbf{So what enables the two agents' plans to mesh is not that they represent each other's plans but more simply that they plan each other's actions as well as their own actions as if they were each about to do the whole thing themselves.}
+
 
 Whereas some have claimed that shared agency can be fully explained in terms of a notion of shared intention, we have argued that some events are joint actions by virtue of being appropriately related to a structure of motor representations we call social motor representation.
 We don’t mean to suggest that all joint actions involve social motor representation.
