--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation GOAL VERSION v2.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation GOAL VERSION v2.tex
@@ -87,8 +87,8 @@ Shared agency is not only a matter of what we intend: sometimes it  constitutive
 
 
 \section{Introduction}
-Shared agency is a familiar feature of everyday life, but it's hard to get a good fix on it without assuming a big chunk of theory.
-I think the best available way to zoom in on shared agency is to think about contrast cases, that is pairs of cases which are as similar as possible except one involves shared agency and the other involves parallel but merely individual agency.
+Shared agency is a familiar feature of everyday life.
+One way to get an intuitive fix on it is to think about contrast cases, that is pairs of cases which are as similar as possible except one involves shared agency and the other involves parallel but merely individual agency.
 
 When members of a flash mob in the Central Cafe respond to a pre-arranged cue by noisily opening their newspapers, they exercise shared agency. 
 But when someone not part of the mob just happens to noisily open her newspaper in response to the same cue, her action does not involve shared agency.%
@@ -104,9 +104,30 @@ But two people who merely happened to be walking to the metro station side by si
 I'll use the term \emph{joint action} for an exercise of shared agency, as contrasted with an \emph{individual action} which is an exercise of individual agency.
 
 
+Shared agency raises \textbf{a tangle of scientific and philosophical questions}.  
+%
+\begin{enumerate}
+\item Psychologically we want to know which mechanisms make it possible \citep{Sebanz:2006yq,vesper_minimal_2010}.  
+\item Developmentally we want to know when shared agency emerges, what it presupposes and whether it might somehow facilitate socio-cognitive, pragmatic or symbolic development \citep{Moll:2007gu,Hughes:2004zj,Brownell:2006gu}.  
+\item Phenomenologically we want to characterise what (if anything) is special about experiences of action and agency when shared agency is involved \citep{Pacherie:2010fk}.  
+\item Metaphysically we want to know what kinds of entities and structures are implied by the existence of shared agency \citep{Gilbert:1992rs,Searle:1994lb}.  
+\item And normatively we want to know what kinds of commitments (if any) are entailed by shared agency and how these commitments arise \citep{Roth:2004ki}.
+%, plus a formal account of how practical reasoning for joint action differs (if at all) from individual practical reasoning \citep{Sugden:2000mw,Gold:2007zd}
+\end{enumerate}
+%
+In investigating these questions it is sometimes useful to have a conceptual framework which enables us to distinguish systematically between shared and individual agency.
+My aim in what follows is to see whether there is a constitutive role for motor representation in explaining shared agency.
+There is now an impressive and growing body of evidence about the role of motor representation in \emph{enabling} joint action.
+But it is perhaps natural to suppose that motor representation is merely an enabling factor, so that ...
 
+\textbf{Shared agency is not always only a matter of our intentions or commitments: in some cases it also constitutively involves certain structures of motor representation.}
+Or so I aim to show.
+
+
+
+\subsection{*slide}
 A basic question about joint action is,
-What is the relation between a joint action and the outcome or outcomes to which it is directed?
+\textbf{What is the relation between a joint action and the outcome or outcomes to which it is directed?}
 Ayesha and Beatrice lift the table. ***
 
 The standard answer to this question involves shared intention.
@@ -136,29 +157,17 @@ In short, shared intentions or their components are inferentially and normativel
 In this talk I'm going to argue that in some cases of joint action,
 the directedness of the joint action to an outcome cannot be explained in terms of shared intention.
 In some cases, the directedness of a joint action to a goal needs to be explained in terms of a special structure of motor representation.
-I'll call this \emph{shared motor representation}.
-As we'll see,
-shared motor representation \textbf{resembles} shared intention in that if our actions are controlled by a shared motor representation, then:
-%
-\begin{enumerate}
-\item there is a single outcome which we each represent 
-\item and these representations coordinate our actions
-\item and coordinate them in such a way that, normally,  the coordination would facilitate the occurrence of the represented outcome. 
-\end{enumerate}
-%
-But shared motor representation \textbf{differs} from shared intention in not integrating in practical reasoning with ordinary individual intention.
-There are normative constraints linking ordinary intentions to shared intentions,
-but no  normative constraints link intention to shared motor representation.
 
-I should say, right at the start, that this speculative philosophy.
-The view inspired by some findings which provide some support for it, but the findings don't establish that the view is correct.
 
-This then is my thesis.
+
+It would be natural to assume that
+motor representation plays at most an enabling role in explaining shared agency,
+that we need motor representation to explain how people manage to coordinate their actions in practice,
+but not to understand what shared agency is.
+But my thesis is that we need to appeal to action-guiding representations that are more primitive than intention and desire in order to explain what shared agency is:
 To understand shared agency we need to understand the relation between joint actions and the  outcomes to which they are directed.
 And understanding this relation requires appeal, not only to structures of intention, commitment and knowledge, 
 but also to structures of motor representation.
-Shared agency is not always only a matter of our intentions or commitments: in some cases it also constitutively involves certain structures of motor representation.
-Or so I aim to show.
 
 
 This conflicts with the view that understanding shared agency requires understanding only shared intention.
@@ -168,7 +177,8 @@ So I disagree with Facundo Alonso's statement that:
 `the key property of joint action lies in its internal component [...] in the participants' having a ``collective'' or ``shared'' intention' \citep[pp.\ 444-5]{alonso_shared_2009}.
 \end{quote}
 %
-But my disagreement is not terribly radical.
+But \textbf{my disagreement is constructive}. 
+I want to build on insights about shared intention.
 I'm not denying that appeal shared intention is also needed in giving an account of shared agency,  
 %and with the claim that \emph{some forms} of shared agency can be fully characterised by appeal to shared intention alone.
 and I'm not even disagreeing here with those who claim that all exercises of shared agency involve shared intentions in some way.
@@ -177,31 +187,16 @@ instead, it's also necessary to invoke motor representations.
 
 
 
-Before I start on this,
-why should anyone care?
-Shared agency raises a tangle of scientific and philosophical questions.  
-%
-\begin{enumerate}
-\item Psychologically we want to know which mechanisms make it possible \citep{Sebanz:2006yq,vesper_minimal_2010}.  
-\item Developmentally we want to know when shared agency emerges, what it presupposes and whether it might somehow facilitate socio-cognitive, pragmatic or symbolic development \citep{Moll:2007gu,Hughes:2004zj,Brownell:2006gu}.  
-\item Phenomenologically we want to characterise what (if anything) is special about experiences of action and agency when shared agency is involved \citep{Pacherie:2010fk}.  
-\item Metaphysically we want to know what kinds of entities and structures are implied by the existence of shared agency \citep{Gilbert:1992rs,Searle:1994lb}.  
-\item And normatively we want to know what kinds of commitments (if any) are entailed by shared agency and how these commitments arise \citep{Roth:2004ki}.
-%, plus a formal account of how practical reasoning for joint action differs (if at all) from individual practical reasoning \citep{Sugden:2000mw,Gold:2007zd}
-\end{enumerate}
-%
-Maybe identifying a constitutive role for motor representation in shared agency will, in a small way,
- support investigation of these questions.  
-%Or, if there is more than one form of shared agency, the account should provide a principled way of distinguishing among forms of individual and shared agency.   
-
 
 
 \section{The theory (non-motor)}
-I want to start by sketching the theory in a way that abstracts from motor representation,
-  so that you can see the general outlines.
-  This will involve introducing a series of ideas.  
-We'll come to the evidence only right at the end.
+In what follows, I'm simply going to take for granted a range of empirical claims about motor representation and its role in facilitating joint action.
+There is a growing body of evidence in support of these claims, some of which is listed on your handout.
+But I'm not going to discuss the evidence.
+Instead I want us to do speculative philosophy,
+to try to tease out the broad implications of the evidence for understanding the structures of agency involved in joint action.
 
+To this end it will be helpful to fix some terminology.
 
 
 \subsection{*distributive goal}
@@ -244,7 +239,7 @@ Where two or more agents' actions have a collective goal there is a sense in whi
 It is not just that each agent individually pursues the collective goal; in addition, there is coordination among their actions which plays a role in bringing about the collective goal.  
 We can put this in terms of the direction metaphor.  
 Any structure or mechanism providing this coordination is directing the agents' actions to the collective goal.  
-So the notion of a collective goal provides a schematic answer to the question about the relation between joint actions and the goals to which they are directed.
+So the notion of a collective goal provides \textbf{a schematic answer} to the question about the relation between joint actions and the goals to which they are directed.
 
 The notion of a collective goal assumes that of coordination.  This should be understood in a broad sense.  
 When two agents between them lift a heavy block by means of each agent pulling on either end of a rope connected to the block via a system of pulleys, their pullings count as coordinated in this broad sense.  
@@ -272,7 +267,6 @@ But the possibility we are interested in is that the coordination required for a
 How could this work in principle?
 
 
-*Aim: Describe reciprocal agent-neutral planning for outcomes whose obtaining would normally involve action on the part of each agent.
 
 \subsection{Agent-neutral}
 
@@ -282,6 +276,7 @@ By saying that something is \emph{agent-neutral} I mean just that it does not in
 %Having an agent-neutral plan makes perfect sense if you're stranded on a desert island because, after all, there it's obvious that you're going to do everything so there's no need to specify who will bring in the washing.
 
 Agent-neutral planning for outcomes whose realisation would normally involve action on the part of several agents is also quite common.
+[*Change example so that can vary parameters: we have decided to make a pizza ...]
 For example, some housemates who have decided to take on an allotment to grow vegetables might sit down together to plan what needs doing without yet assigning roles to particular individuals. 
 In so planning, each housemate is thinking about what is to be done and not what she herself will do.  
 %(This is an idealisation, of course.)
@@ -296,6 +291,9 @@ In the above example of agent-neutral planning,
 	the housemates \textbf{plan together} and \textbf{agree} on a common plan.
 But an individual can construct an agent-neutral plan by herself, even if its eventual execution will involve others.
 	In fact, two or more individuals who are assigned a task might each individually engage in agent-neutral planning in parallel.
+	
+Suppose that the housemates each sit alone in their rooms and plan the trip to Balaton.
+
 	
 Of course, for us to engage in reciprocal, parallel agent-neutral planning concerning a particular outcome only makes sense if the  plans we construct will be identical or similar enough that differences don't matter.
 And, of course, we must also all assign the same or similar roles to ourselves and each other.
@@ -344,28 +342,63 @@ that
 
 
 
-\subsection{*}
-Having each agent plan the whole joint action means that (i) each agent plans the other agent's action,
-(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action [***AMBIGUOUS: `that agent's plan' must refer to the other agent, not `each agent'],
+\subsection{*Motor}
+To see how there might be agent-neutral motor planning for outcomes realising which will involve the agent and another's or others' actions, 
+let us return to a case involving a single agent.
+
+
+
+Consider  an individual action.
+Suppose an agent moves a mug from one place to another, passing it from her left hand to her right hand half way.
+It is a familiar idea that motor planning, like planning generally, involves starting with relatively abstract representations of outcomes and gradually filling in details.
+We can capture this by supposing that 
+motor representations for planning and monitoring action involve a hierarchical structure of representations.
+At the top we might find a relatively abstract representation of an outcome, in this case of the movement of the object from one location to another.
+Action-relevant details are progressively filled in by representations at lower stages of the hierarchy. 
+Now in the action we are considering there is a need, even for the single agent, to coordinate the exchange between her two hands.
+How is this achieved? 
+We suppose that part of the answer involves the fact that planning for the movements of each hand is not done entirely independently.
+Rather there is a plan for the whole action
+and plans for the movements of each hand are components of this larger plan.
+It is in part because they are parts of a larger plan that the plan for one hand constrains and is constrained by the plan for the other hand.
+
+
+
+
+
+How is this relevant to the case of joint action?
+In joint action the agents have the same goal, to move the object from one place to another.
+They also face a similar coordination problem, requiring a precisely timed swap from one hand to another.
+Now suppose, that the same planning is involved in the individual case (where one agent performs the whole action) and in the joint action case (where the action is distributed between two agents).
+The planning is the same almost up to the actual muscle contractions.
+
+How could this be helpful?
+Suppose the agents' planning processes are similar enough that, for a given context and problem, they will produce approximately the same plans.
+Then having each agent plan the whole joint action means that (i) each agent plans the other agent's action,
+(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action [***AMBIGUOUS: `that agent's plan' must refer to the other agent, not `each agent',
 and 
 (iii) each  agent's plans for their own action are constrained by the plans for the other agent's action.
 
-\textbf{So what enables the two agents' plans to mesh is not that they represent each other's plans but more simply that they plan each other's actions as well as their own actions as if they were each about to do the whole thing themselves.}
+[***TODO: (a) contrast this case with a team of experts, each with different motor expertise (e.g.\ musicians playing together).  
+They can't plan each others' actions.
+(b) Discuss in how much detail each others' actions should be planned so as to enable coordination.
+]
+
+
+So what enables the two agents' plans to mesh is not that they represent each other's plans but more simply that they plan each other's actions as well as their own actions as if they were each about to do the whole thing themselves.
 
 Each agent is planning (and monitoring) both their actions almost as if a single agent were going to execute the whole action.
 And of course this is exactly what we want for small-scale joint action---we want two or more agents to act as one.
+This may be why the performance of dyads in joint actions often resembles the performance of individuals tasked with performing the whole action alone \citep{Knoblich:2003nf}.
 
-So what is the difference between the individual and the joint case?  From the present point of view, the primary difference may be that in joint action there is a need to prevent execution of the parts of the action which are not one’s own.
+So what is the difference between the individual and the joint case?  From the point of view of motor representation, the primary difference may be that in joint action there is a need to prevent execution of the parts of the action which are not one’s own.
 
-So far: shown theoretically how there could be directedness of joint action to outcome by appeal to reciprocal representations of outcomes which trigger agent-neutral planning.
-
-But unclear that any such representations exist, or at least that they plan any significant role in ordinary cases of joint action.
-What makes this theoretical possibility interesting is evidence that these representations occur in motor control of action.
-
-***section: say what motor processes are; examine what would be evidence for different points.
+%Here then is the basic idea I take to be guiding Kourtis and others.
+%Coordination is sometimes achieved by having each agent’s motor system plan all of their actions; 
+%given some assumptions, this could be a way of making it likely that each will execute their part in the joint action in a way that meshes with the way the other agents execute their parts.
 
 
-\section{Shared motor representation}
+\section{[*cut] Shared motor representation}
 Our argument starts with an empirical premise about enabling conditions for joint action: there are reciprocal, agent-neutral motor representations of outcomes whose obtaining would normally involve action on the part of each agent;
 moreover, these structures of motor representation sometimes facilitate coordination when agents exercise shared agency.
 This needs unpacking. 
@@ -450,176 +483,12 @@ So the choice of term merely reflects our aim.
 
 
 
-\section{The Evidence: Interpersonal coordination and motor representation}
-
-These bits of evidence are relevant (***):
-%
-\begin{enumerate}
-
-\item \citet{kourtis:2012_predictive} shows that motor planning can occur for others' actions when we are engaged in joint action with them.
-
-\item Vesper's ESPP paper (on jumping together and imagining jumping together --- jumping is published \citep{vesper:2012_jumping}, imagining jumping is about to be submitted (as of August 2012).  This shows that individuals are capable of running motor simulations of multiple roughly simultaneous actions. 
-(The important point for me is that one can simulate roughly simultaneous actions, not that the simulations are simultaneous.)
-
-\item The GROOP effect shows that there are representations which specify each agent's task in relation to the other (so they are not simple representing the outcomes to which each of their actions are directed; they are representing an outcome to which their actions taken together are directed.)
-
-\item Vesper says forthcoming EEG paper using piano playing paradigm on agent-neutral identification of error: one brain wave signals whether there is an error, and a different brain wave signals whose error it is (also tells you whether the overall harmonics are affected)
-\end{enumerate}
-
-
-It is hardly controversial that reciprocal motor representations exist, for their existence is suggested by by a large body of research on motor cognition in action observation.
-[***Rest of this paragraph belongs in the evidence section?
-Should be clearer about transition:
-(a) I am observing and we reciprocally represent an outcome of your action (mirroring).
-(b) We are interacting and reciprocally represent an outcome of your action (mirroring in joint action).
-(c) We are interacting and reciprocally represent an outcome to which our actions are distributively directed.%
-] 
-It is more controversial that reciprocal motor representation occurs in joint action, but there is some evidence for this claim too.%
-\footnote{
-See \citet{kourtis:2012_predictive}: `the partner’s expected action is simulated at the motor level, which probably facilitates effective performance of the joint action.'
-\citet{kourtis:2010_favoritism} show that 
-reciprocal motor representation is more likely to occur in joint action than is mere observation. 
-See also \citet{Knoblich:2003nf}.
- }
-
-
-
-
-
-
-
-
-
-What follows is speculative philosophy: we now take for granted that  social motor representation sometimes facilitates the exercise of shared agency and ask whether this matters for a philosophical account of shared agency. 
-As a first step, we shall ask how social motor representation might facilitate agents in coordinating their actions.
-Note that answering this question does not directly commit us to any view about shared agency.
-After all, social motor representation might sometimes facilitate coordination while being extraneous to a philosophical account of shared agency.
-
-
-\section{How could social motor representation coordinate actions?}
+\section{[*cut] How could social motor representation coordinate actions?}
 Suppose that social motor representation is sometimes present when two or more agents act together.
 It doesn't follow, of course, that social motor representation will play any role in coordinating the agents' actions.
 But let us consider just the possibility that it might.
 How could this happen?
 How could social motor representation play a role in coordinating action when two or more agents act together?
-
-As a first step towards answering  this question let us illustrate a general principle about planning by scaling up from motor action all the way to corporate action.
-
-In small city state, Aravinda organises the trams and Gerhard the busses.
-Each is responsible for devising and updating the timetable for the service.
-Let us stipulate that the extent to which the tram and bus services are coordinated is to be measured by the sum of all passengers' total journey times.
-So a change to the timetables would result in better coordination  just if it would decrease the sum of passengers' total journey times.
-To illustrate, improving coordination might involve having trams arrive at a stop shortly before, rather than shortly after, busses depart from there.
-Now Aravinda and Gerhard each intend they, Aravinda and Gerhard, coordinate the trams with the busses  to the greatest extent possible given other constraints; and they intend to do this by way of these intentions and meshing subplans of them, and this is common knowledge between them. 
-Aravinda and Gerhard thus meet Bratman's sufficient conditions for them to have a shared intention.
-Acting on this intention, 
-every January Aravinda updates the tram timetables and sends Gerhard the changes.
-Likewise, Gerhard  updates the bus timetables every June and sends Aravinda the changes.
-In this way  each is responsive to the other's intentions and subplans of these. 
-Indeed, each may even try to predict changes in the other's subplans and modify their own accordingly.  
-But from each individual's point of view, the other's plans are  merely a constraint.
-
-This approach to planning suffers from two defects.
-First, it is unlikely to be optimal in the sense of resulting, eventually, in a combination of plans such that no other combination of plans would have been better for at least one service and no worse for either service.
-Second, it is unlikely to be efficient in the sense of allowing Gerhard and Aravinda to arrive at an optimal combination of plans for the two services, trams and buses, with the fewest iterations.%
-% --- I removed this footnote because the case is a bit different
-% --- In Konvalinka, the subjects have to act simultaneously so they can't wait to see what the other does
-%\footnote{
-%The limits of this type of coordination, where each agent tries to predict the actions of the other, is nicely illustrated by the `two-way interaction' condition of an experiment by \citet{konvalinka:2010_follow}.
-%When subjects were required to synchronise the timing of finger taps with each other in this condition, 
-%%each had to predict the others' action and modify their own accordingly. 
-%they ended up with a pattern of errors `oscillating in opposite directions' as each attempted to move towards the other (p.\ 2228).
-%}
-
-How could they do better?
-One possibility may be to have a single person planning the busses and trams---perhaps, for example, Aravinda could buy Gerhard's franchise. 
-But suppose that this is not possible, and that there are limits on how much information Aravinda and Gerhard can share. 
-Then another way that might improve things would be to have Aravinda and Gerhard each plan everything.
-So Aravinda would plan the best timetable for all the trams and busses, and Gerhard would do the same.
-Since Aravinda only controls the trams, she can only implement the tram-related part of this master timetable.
-Likewise, Gerhard can only implement the bus part of his master timetable.
-But if Aravinda's and Gerhard's separate planning processes are sufficiently similar, this process may result in coordinated services.
-In this new case, 
-Aravinda and Gerhard coordinate their actions 
-not by knowing or predicting each others' plans 
-but by thinking about the best overall plan.
-Instead of each viewing the others' plans and actions as constraint on their own,
-in planning actions they absorb the others' actions.
-
-The question was how social motor representation might play a role in coordinating action.
-We propose that it might do so in the way illustrated by Aravinda and Gerhard's final attempt at coordination,
-where each plans everything despite only being in a position to execute half of the plan.
-
-
-
-
-%Let us go very slowly here.
-%Suppose that, in moving the mug, you try to locate two separate plans:
-%a plan for your left hand and a plan for your right hand.
-%In the Left Plan (as we might call it), the movements of the right hand feature as a constraint.
-%And conversely for the Right Plan.
-%It is almost as if you two hands are under the control of two separate agents who periodically share information about plans.
-%So if you update the Right Plan, you will need to make compensating changes to the Left Plan.
-%And of course those compensating changes to the left plan may in turn trigger further changes to the Right Plan.
-%And so on.
-%This approach might work in some cases. 
-%But it imposes two costs.
-%First, it is unlikely to be efficient in the sense of minimising the range of possible combinations that are considered. 
-%Second, it is unlikely to be optimal in the sense of finding a combination of plans such that no other combination of plans would have been better for at least one hand and no worse for any hand.
-%How could you have done beter?
-%The mistake was to have two separate plans, Left and Right, in each of which the movements of the other hand are a constraint.
-%The better 
-
-
-To see how this might work,
-let us step down to motor action but first consider only  an individual action.
-Suppose an agent moves a mug from one place to another, passing it from her left hand to her right hand half way.
-It is a familiar idea that motor planning, like planning generally, involves starting with relatively abstract representations of outcomes and gradually filling in details.
-We can capture this by supposing that 
-motor representations for planning and monitoring action involve a hierarchical structure of representations.
-At the top we might find a relatively abstract representation of an outcome, in this case of the movement of the object from one location to another.
-Action-relevant details are progressively filled in by representations at lower stages of the hierarchy. 
-Now in the action we are considering there is a need, even for the single agent, to coordinate the exchange between her two hands.
-How is this achieved? 
-We suppose that part of the answer involves the fact that planning for the movements of each hand is not done entirely independently.
-Rather there is a plan for the whole action
-and plans for the movements of each hand are components of this larger plan.
-It is in part because they are parts of a larger plan that the plan for one hand constrains and is constrained by the plan for the other hand.
-
-
-
-
-
-How is this relevant to the case of joint action?
-In joint action the agents have the same goal, to move the object from one place to another.
-They also face a similar coordination problem, requiring a precisely timed swap from one hand to another.
-Now suppose, that the same planning is involved in the individual case (where one agent performs the whole action) and in the joint action case (where the action is distributed between two agents).
-The planning is the same almost up to the actual muscle contractions.
-
-How could this be helpful?
-Suppose the agents' planning processes are similar enough that, for a given context and problem, they will produce approximately the same plans.
-Then having each agent plan the whole joint action means that (i) each agent plans the other agent's action,
-(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action [***AMBIGUOUS: `that agent's plan' must refer to the other agent, not `each agent',
-and 
-(iii) each  agent's plans for their own action are constrained by the plans for the other agent's action.
-
-[***TODO: (a) contrast this case with a team of experts, each with different motor expertise (e.g.\ musicians playing together).  
-They can't plan each others' actions.
-(b) Discuss in how much detail each others' actions should be planned so as to enable coordination.
-]
-
-
-So what enables the two agents' plans to mesh is not that they represent each other's plans but more simply that they plan each other's actions as well as their own actions as if they were each about to do the whole thing themselves.
-
-Each agent is planning (and monitoring) both their actions almost as if a single agent were going to execute the whole action.
-And of course this is exactly what we want for small-scale joint action---we want two or more agents to act as one.
-This may be why the performance of dyads in joint actions often resembles the performance of individuals tasked with performing the whole action alone \citep{Knoblich:2003nf}.
-
-So what is the difference between the individual and the joint case?  From the point of view of motor representation, the primary difference may be that in joint action there is a need to prevent execution of the parts of the action which are not one’s own.
-
-%Here then is the basic idea I take to be guiding Kourtis and others.
-%Coordination is sometimes achieved by having each agent’s motor system plan all of their actions; 
-%given some assumptions, this could be a way of making it likely that each will execute their part in the joint action in a way that meshes with the way the other agents execute their parts.
 
 
 \section{Grounding the purposiveness of joint action}
@@ -889,14 +758,17 @@ But it also seems possible that in some cases, what we intend when we intend tha
 So perhaps harmony between shared intention and social motor representation is sometimes achieved in this way: what we intend when we share an intention is the sort of joint action that involves social motor representation.
 
 
-\section{*Conclusion version 1}
+\section{Conclusion}
 In conclusion,
-I have suggested that 
-shared motor representations
-can 
-ground purposive joint action
-for they
-can coordinate two or more agents' actions in virtue of representing a single outcome to which each agent's actions are directed.
+I have been arguing that 
+in order to fully understand 
+the relation between joint actions and the goals to which they are directed
+we need 
+to invoke 
+shared motor representations.
+This is because shared motor representations
+involve a representation, on the part of each agent, of a single outcome,
+and coordinate the agents' actions in such a way that, normally, the occurrence of the represented outcome will be facilitated.
 In this respect shared motor representation resembles shared intention.
 
 But there are also differences.
@@ -912,69 +784,6 @@ The other is that we face a challenge.
 The challenge is to explain how these two kinds of representation could sometimes harmoniously contribute to effective shared agency despite not being inferentially integrated in practical reasoning.
 
 
-
-\section{*Conclusion version 2}
-My question was,
-What's the relation between a joint action and the goal or goals to which it is directed?
-
-I have been arguing that we may need to appeal to shared intention to answer this question,
-but we can't answer it by appeal only to shared intention.
-This is because some joint actions are related to goals by special structures of motor representation which I've been calling shared motor representations.
-
-Shared motor representation is \textbf{like shared intention} in that: (i) represent outcome; (ii) coordinate action; (iii) coordinate action in such a way that ...
-
-But  shared motor representation is \textbf{unlike shared intention} in that its constituent representations are non-propositional in format and so it doesn't inferentially integrate with ordinary intentions and knowledge states.
-
-This led us to the interface problem ...
-
-So to understand the relation between joint actions and their goals, we need to appeal, 	
-	not only to structures of intention and knowledge,
-	but also to structures of motor representation.
-
-This may matter for understanding the role of joint action in evolution and development;
-it may have consequences  for the metaphysics of joint action, and for claims about norms governing shared agency.
-
-If it's true that some joint actions involve shard motor representation,
-
-
- phenomenology
-
-
-
-Having each agent plan the whole joint action means that (i) each agent plans the other agent's action,
-(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action [***AMBIGUOUS: `that agent's plan' must refer to the other agent, not `each agent'],
-and 
-(iii) each  agent's plans for their own action are constrained by the plans for the other agent's action.
-
-\textbf{So what enables the two agents' plans to mesh is not that they represent each other's plans but more simply that they plan each other's actions as well as their own actions as if they were each about to do the whole thing themselves.}
-
-
-Whereas some have claimed that shared agency can be fully explained in terms of a notion of shared intention, we have argued that some events are joint actions by virtue of being appropriately related to a structure of motor representations we call social motor representation.
-We don’t mean to suggest that all joint actions involve social motor representation.
-The view we are aiming to establish is rather this: Some events are joint actions in virtue of being appropriately related to social motor representations which bind their components together and ensure that there is a single outcome to which these components are collectively directed.
-This is why 
-%Recap: the question was: Does social motor representation  play a role in explaining what joint is?
-%I have just been arguing for a positive answer.
-%My thesis is this:
-%\textbf{Reciprocal agent-neutral motor representations coordinate multiple agents’ actions around an outcome in part by virtue of representing that outcome.}
-%That is, reciprocal social motor representations can ground the purposiveness of joint action.
-%This is why I think that 
-understanding shared agency requires understanding not only shared intention but also
- the coordinating role of social motor representation.
-
-None of this is to deny that shared intention is among the ingredients needed to characterise shared agency.
-Indeed, it may be that the notion of social motor representation has a role to play in explaining what shared intention is.
-In constructing realisers of shared intention from ordinary individual intention, we need intentions \emph{that we $J$}.
-As has been much discussed \citep[e.g.][]{petersson_collectivity_2007}, the contents of these intentions cannot all refer to actions involving shared intentions.
-For this reason Michael Bratman suggests that things we intend are  cooperatively neutral activities. %*ref
-It is then necessary to add further intentions in order to transform cooperatively neutral activities into joint actions.
-But it also seems possible that in some cases, what we intend when we intend that we $J$ is not a cooperatively neutral activity but instead a joint action of the sort which involves social motor representation.
-
-So perhaps harmony between shared intention and social motor representation is sometimes achieved in this way: what we intend when we share an intention is the sort of joint action that involves social motor representation.
-
-In conclusion, two things.
-First, some events are joint actions in virtue of being appropriately related to social motor representations which bind their components together and ensure that there is a single outcome to which these components are collectively directed.
-Second, and much more tentatively, in some cases social motor representation may be among the ingredients that realise a shared intention.
 
 
 \bibliography{$HOME/endnote/phd_biblio}
